<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.RegisterFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_large">

            <TextView
                android:id="@+id/welcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:text="@string/welcome_to"
                android:textColor="@color/primaryColor"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/welcome"
                android:gravity="center_horizontal"
                android:text="@string/mcaprep"
                android:textColor="@color/primaryColor"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/signup_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/name"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="@dimen/padding_small"
                android:text="@string/getting_started"
                android:textColor="@color/primaryColor"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_medium" />

            <TextView
                android:id="@+id/signup_sub_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/signup_heading"
                android:layout_marginBottom="40dp"
                android:text="@string/create_an_account_to_continue_your_all_tests"
                android:textColor="@color/gray"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_small" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/signup_sub_heading"
                android:layout_marginBottom="16dp"
                android:hint="@string/name"
                app:startIconDrawable="@drawable/name">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/name_input"

                android:layout_marginBottom="16dp"
                android:hint="@string/email"
                app:startIconDrawable="@drawable/outline_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/email_input"
                android:layout_marginBottom="16dp"
                android:hint="@string/password"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/lock">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_password_input_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/signup_password_input"
                android:layout_marginBottom="16dp"
                android:hint="@string/confirm_password"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/lock">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/signup_check"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_below="@id/signup_password_input_confirm"
                android:background="@drawable/custom_checkbox"
                android:button="@null" />

            <TextView
                android:id="@+id/signup_tnc"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_below="@id/signup_password_input_confirm"
                android:layout_marginStart="18dp"
                android:layout_marginBottom="50dp"
                android:layout_toEndOf="@id/signup_check"
                android:gravity="center_vertical"
                android:text="@string/agree_to_terms_amp_conditions"
                android:textColor="@color/gray"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_small" />


            <TextView
                android:id="@+id/login_already"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/signup_btn"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/already_have_an_account_sign_in"
                android:textColor="@color/gray"
                android:textSize="@dimen/text_size_small" />

            <RelativeLayout
                android:id="@+id/signup_btn"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_below="@id/signup_tnc">

                <Button
                    android:id="@+id/button_signup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="1dp"
                    android:backgroundTint="@color/primaryColor"
                    android:text="@string/sign_up"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="7dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/white_circle"
                    android:contentDescription="@string/error_image_button"
                    android:padding="@dimen/padding_small"
                    app:srcCompat="@drawable/arrow_forward" />

                <!-- Circle Icon at the End -->
            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>