<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.LoginFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_large">

            <TextView
                android:id="@+id/welcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:gravity="center_horizontal"
                android:text="@string/welcome_to"
                android:textColor="@color/primaryColor"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/welcome"
                android:gravity="center_horizontal"
                android:text="@string/mcaprep"
                android:textColor="@color/primaryColor"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/login_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/name"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="@dimen/padding_small"
                android:text="@string/let_s_sign_in"
                android:textColor="@color/primaryColor"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_medium" />

            <TextView
                android:id="@+id/login_sub_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_heading"
                android:layout_marginBottom="50dp"
                android:text="@string/login_tagline"
                android:textColor="@color/gray"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_small" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_sub_heading"
                android:layout_marginBottom="16dp"
                android:hint="@string/email"
                app:startIconDrawable="@drawable/outline_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primaryColor"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/email_input"
                android:layout_marginBottom="16dp"
                android:hint="@string/password"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/lock">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primaryColor"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/login_check"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_below="@id/login_password_input"
                android:background="@drawable/custom_checkbox"
                android:button="@null" />

            <TextView
                android:id="@+id/login_remember"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_below="@id/login_password_input"
                android:layout_marginStart="18dp"
                android:layout_marginBottom="50dp"
                android:layout_toEndOf="@id/login_check"
                android:gravity="center_vertical"
                android:text="@string/remember_me"
                android:textColor="@color/gray"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:id="@+id/forget_pass"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_below="@id/login_password_input"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="50dp"
                android:layout_toEndOf="@id/login_remember"
                android:gravity="center|end"
                android:text="@string/forgot_password"
                android:textColor="@color/gray"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_small" />


            <RelativeLayout
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_below="@id/login_remember">

                <Button
                    android:id="@+id/button_login"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="1dp"
                    android:backgroundTint="@color/primaryColor"
                    android:text="@string/sign_in"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_size_medium" />

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="7dp"
                    android:layout_marginBottom="9dp"
                    android:background="@drawable/white_circle"
                    android:contentDescription="@string/error_image_button"
                    android:padding="8dp"
                    app:srcCompat="@drawable/arrow_forward" />

                <!-- Circle Icon at the End -->
            </RelativeLayout>

            <!--        <TextView-->
            <!--            android:id="@+id/continue_with"-->
            <!--            android:layout_width="match_parent"-->
            <!--            android:layout_height="wrap_content"-->
            <!--            android:layout_below="@id/login_btn"-->
            <!--            android:layout_marginTop="20dp"-->
            <!--            android:gravity="center"-->
            <!--            android:text="Or Continue With"-->
            <!--            android:textColor="@color/primaryColor"-->
            <!--            android:textFontWeight="600"-->
            <!--            android:textSize="15sp" />-->

            <!--        <ImageView-->
            <!--            android:id="@+id/google_btn"-->
            <!--            android:layout_width="58dp"-->
            <!--            android:layout_height="56dp"-->
            <!--            android:layout_below="@+id/continue_with"-->
            <!--            android:layout_alignParentStart="true"-->
            <!--            android:layout_alignParentEnd="true"-->
            <!--            android:layout_marginStart="172dp"-->
            <!--            android:layout_marginTop="20dp"-->
            <!--            android:layout_marginEnd="181dp"-->
            <!--            android:background="@drawable/white_circle"-->
            <!--            android:padding="10dp"-->
            <!--            app:srcCompat="@drawable/google" />-->

            <TextView
                android:id="@+id/signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_btn"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:text="@string/don_t_have_an_account_sign_up"
                android:textColor="@color/gray"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_small" />

        </RelativeLayout>
    </ScrollView>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:lottie_rawRes="@raw/loading"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:background="@color/background"
        android:alpha="0.9"
        android:visibility="gone"/>

</RelativeLayout>